--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -62,15 +62,9 @@ jobs:
           curl -sS https://getcomposer.org/installer | php
           sudo mv composer.phar /usr/local/bin/composer
       - run: composer -v
-      - name: Download Wasmtime
-        shell: bash
+      - name: Install Wasmtime
         run: |
-          WASMTIME_VERSION=v14.0.0
-          OS=$(uname | tr '[:upper:]' '[:lower:]')
-          ARCHIVE_NAME="wasmtime-${WASMTIME_VERSION}-${OS}-x86_64"
-          curl -LO https://github.com/bytecodealliance/wasmtime/releases/download/${WASMTIME_VERSION}/${ARCHIVE_NAME}.tar.xz
-          tar xf ${ARCHIVE_NAME}.tar.xz
-          echo "$PWD/${ARCHIVE_NAME}" >> $GITHUB_PATH
+          curl https://wasmtime.dev/install.sh -sSf | bash
       - run: wasmtime --version
       - run: sudo apt-get install ninja-build
       - run: sudo apt-get -y install podman
