--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -65,4 +65,7 @@ jobs:
       - run: sudo apt-get install ninja-build
       - run: sudo apt-get -y install podman
       - run: sudo gem install rubocop --no-document
+      - run: curl -s "https://get.sdkman.io" | bash
+      - run: source "$HOME/.sdkman/bin/sdkman-init.sh"
+      - run: sdk version
       - run: ruby code/programs/ruby/monorepo_build/build.rb
