--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -58,4 +58,7 @@ jobs:
       - run: brew install ninja
       - run: ninja --version
       - run: gem install rubocop --no-document
+      - run: curl -s "https://get.sdkman.io" | bash
+      - run: source "$HOME/.sdkman/bin/sdkman-init.sh"
+      - run: sdk version
       - run: ruby code/programs/ruby/monorepo_build/build.rb
