--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -54,4 +54,6 @@ jobs:
           choco install ninja
           ninja --version
           gem install rubocop --no-document
+          choco install kotlinc
+          kotlinc -version
           ruby code\programs\ruby\monorepo_build\build.rb
