--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -53,6 +53,10 @@ jobs:
           cmake --version
           choco install ninja
           ninja --version
-          wasmtime
+           run: |
+          Invoke-WebRequest -Uri https://github.com/bytecodealliance/wasmtime/releases/latest/download/wasmtime-x86_64-windows.zip -OutFile wasmtime.zip
+          Expand-Archive -Path wasmtime.zip -DestinationPath wasmtime
+          echo "$env:GITHUB_WORKSPACE\wasmtime" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          wasmtime --version
           gem install rubocop --no-document
           ruby code\programs\ruby\monorepo_build\build.rb
