--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -65,4 +65,6 @@ jobs:
       - run: sudo apt-get install ninja-build
       - run: sudo apt-get -y install podman
       - run: sudo gem install rubocop --no-document
+      - run: echo "/home/linuxbrew/.linuxbrew/bin:/home/linuxbrew/.linuxbrew/sbin" >>"$GITHUB_PATH"
+      - run: brew install kotlin
       - run: ruby code/programs/ruby/monorepo_build/build.rb
