--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -58,4 +58,5 @@ jobs:
       - run: brew install ninja
       - run: ninja --version
       - run: gem install rubocop --no-document
+      - run: brew install kotlin
       - run: ruby code/programs/ruby/monorepo_build/build.rb
