--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -67,4 +67,5 @@ jobs:
       - run: sudo gem install rubocop --no-document
       - run: echo "/home/linuxbrew/.linuxbrew/bin:/home/linuxbrew/.linuxbrew/sbin" >>"$GITHUB_PATH"
       - run: brew install kotlin
+      - run: sudo apt-get install -y sbcl
       - run: ruby code/programs/ruby/monorepo_build/build.rb
