--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -56,4 +56,7 @@ jobs:
           gem install rubocop --no-document
           choco install kotlinc
           kotlinc -version
+          $url = "https://sourceforge.net/projects/sbcl/files/sbcl/2.5.4/sbcl-2.5.4-x86-64-windows-binary.msi/download"
+          Invoke-WebRequest -Uri $url -OutFile sbcl-installer.msi
+          Start-Process msiexec.exe -ArgumentList "/i", "sbcl-installer.msi", "/quiet", "/norestart" -Wait
           ruby code\programs\ruby\monorepo_build\build.rb
