Add Support For Common Lisp (#99)
* Add Support For Common Lisp

* Adding notes

* Attempt to use sbcl from Chocolatey

* Revert changes to an unrelated file

--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -56,4 +56,6 @@ jobs:
           gem install rubocop --no-document
           choco install kotlinc
           kotlinc -version
+          choco install sbcl
+          sbcl --version
           ruby code\programs\ruby\monorepo_build\build.rb
